--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.5",
-    "sass": "^1.84.0"
+    "sass": "^1.84.0",
+    "styled-components": "^6.1.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
